xwiki/xwiki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xwiki
  namespace: xwiki
  labels:
    app: xwiki
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: xwiki
  template:
    metadata:
      labels:
        app: xwiki
        name: xwiki
    spec:
      nodeSelector:
        kubernetes.io/hostname: <NODE_NAME>
      containers:
        - name: xwiki
          image: xwiki:stable-postgres-tomcat
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: data
              mountPath: /usr/local/xwiki
            - name: webinf
              mountPath: /usr/local/tomcat/webapps/ROOT/WEB-INF
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: xwiki-data
        - name: xwiki-hibernate
          configMap:
            name: xwiki-hibernate
        - name: webinf
          emptyDir: {}
