xwiki/xwiki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xwiki
  namespace: xwiki
spec:
  ingressClassName: nginx
  rules:
    - host: xwiki.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xwiki
                port:
                  number: 8080
